--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,14 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="src/lib/jackson-all-1.9.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/sqlite-jdbc-3.15.1.jar"/>
+	<classpathentry kind="lib" path="src/lib/sqlite-jdbc-3.7.15-M1.jar"/>
+	<classpathentry kind="lib" path="src/lib/sqlite-jdbc-3.7.15-SNAPSHOT-2.jar"/>
+	<classpathentry kind="lib" path="src/lib/sqlite-jdbc-3.7.15-SNAPSHOT-javadoc.jar"/>
+	<classpathentry kind="lib" path="src/lib/sqlite-jdbc-3.7.15-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="src/lib/sqlite-jdbc-3.7.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="src/lib/sqlite-jdbc-3.7.2.jar"/>
+	<classpathentry kind="lib" path="src/lib/sqlite-jdbc4-3.8.2-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
